Dynamic button try layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity
             android:name=".Cat2Activity"
             android:launchMode="singleTask" />
-        <activity android:name=".Cat3Activity"></activity>
+        <activity android:name=".Cat3Activity" />
+        <activity android:name=".DynamicTry"></activity>
     </application>
 
 </manifest>
