--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,10 @@
         <activity
             android:name=".Cat2Activity"
             android:launchMode="singleTask" />
-        <activity android:name=".Cat3Activity" />
-        <activity android:name=".DynamicTry"></activity>
+        <activity
+            android:name=".Cat3Activity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".DynamicTry"/>
     </application>
 
 </manifest>
